llvm-merge-example-ubuntu/example/llvm-latest/free_400e40.ll.out
llc: free_400e40.ll:371:20: error: '%R133' defined with type 'float'
  %R134 = zext i32 %R133 to i128
                   ^
